--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "keywords": [
     "18xx"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/msaari/18sh.git"
+  },
   "author": "Mikko Saari",
   "license": "ISC",
   "dependencies": {
     "cli-table": "^0.3.1",
     "configstore": "^5.0.0",
-    "inquirer": "^6.3.1",
     "terminal-kit": "^1.28.1"
   },
   "devDependencies": {
