--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": "eslint:recommended",
     "globals": {
@@ -13,6 +14,9 @@
         "ecmaVersion": 2018,
         "sourceType": "script"
     },
+    "plugins": [
+        "mocha"
+    ],
     "rules": {
         "accessor-pairs": "error",
         "array-bracket-newline": "error",
