--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An 18xx shell.",
   "main": "18sh.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "18xx"
@@ -21,6 +21,9 @@
     "terminal-kit": "^1.28.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "chai": "^4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-mocha": "^5.3.0",
+    "mocha": "^6.1.4"
   }
 }
