--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "18sh.js",
   "scripts": {
     "test": "env NODE_ENV=test mocha",
-    "watch": "env NODE_ENV=test mocha --watch"
+    "watch": "env NODE_ENV=test mocha --watch",
+    "coverage": "env NODE_ENV=test nyc --reporter=text mocha"
   },
   "keywords": [
     "18xx"
@@ -25,6 +26,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-mocha": "^5.3.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1"
   }
 }
