--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -118,7 +118,7 @@
         "max-classes-per-file": "error",
         "max-depth": "error",
         "max-len": "off",
-        "max-lines": "error",
+        "max-lines": ["error", { "skipBlankLines": true, "skipComments": true }],
         "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
         "max-params": "off",
@@ -213,7 +213,7 @@
         "no-trailing-spaces": "error",
         "no-undef-init": "error",
         "no-undefined": "error",
-        "no-underscore-dangle": "error",
+        "no-underscore-dangle": ["off"],
         "no-unmodified-loop-condition": "error",
         "no-unneeded-ternary": "error",
         "no-unused-expressions": "off",
