--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install:
   - npm install -g nyc
   - npm install -g codecov
 script:
-  - nyc report --reporter=text-lcov > coverage.lcov && codecov
+  - npm run test
+  - npm run report-coverage
