--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "env NODE_ENV=test mocha",
     "watch": "env NODE_ENV=test mocha --watch",
-    "coverage": "env NODE_ENV=test nyc --reporter=html mocha"
+    "coverage": "env NODE_ENV=test nyc --reporter=html mocha",
+    "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "keywords": [
     "18xx"
