--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ node_js:
 env:
   - NODE_ENV=test
 install:
+  - npm install -g mocha
   - npm install -g nyc
   - npm install -g codecov
+  - mkdir .nyc_output
 script:
   - npm run test
   - npm run report-coverage
