--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,10 @@
         "node": true,
         "mocha": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "prettier"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -19,37 +22,10 @@
     ],
     "rules": {
         "accessor-pairs": "error",
-        "array-bracket-newline": "error",
-        "array-bracket-spacing": [
-            "error",
-            "never"
-        ],
         "array-callback-return": "error",
         "array-element-newline": "off",
         "arrow-body-style": "error",
-        "arrow-parens": [
-            "error",
-            "as-needed"
-        ],
-        "arrow-spacing": [
-            "error",
-            {
-                "after": true,
-                "before": true
-            }
-        ],
         "block-scoped-var": "off",
-        "block-spacing": [
-            "error",
-            "always"
-        ],
-        "brace-style": [
-            "error",
-            "1tbs",
-            {
-                "allowSingleLine": true
-            }
-        ],
         "callback-return": "error",
         "camelcase": "error",
         "capitalized-comments": [
@@ -57,26 +33,14 @@
             "always"
         ],
         "class-methods-use-this": "error",
-        "comma-dangle": "error",
         "comma-spacing": "off",
-        "comma-style": [
-            "error",
-            "last"
-        ],
         "complexity": "off",
-        "computed-property-spacing": [
-            "error",
-            "never"
-        ],
         "consistent-return": "error",
         "consistent-this": "error",
         "curly": "off",
         "default-case": "error",
-        "dot-location": "error",
         "dot-notation": "error",
-        "eol-last": "error",
         "eqeqeq": "off",
-        "func-call-spacing": "error",
         "func-name-matching": "error",
         "func-names": "error",
         "func-style": [
@@ -84,41 +48,22 @@
             "expression"
         ],
         "function-paren-newline": "off",
-        "generator-star-spacing": "error",
         "global-require": "error",
         "guard-for-in": "error",
         "handle-callback-err": "error",
         "id-blacklist": "error",
         "id-length": "error",
         "id-match": "error",
-        "implicit-arrow-linebreak": [
-            "error",
-            "beside"
-        ],
         "indent": "off",
         "indent-legacy": "off",
         "init-declarations": "error",
-        "jsx-quotes": "error",
-        "key-spacing": "error",
-        "keyword-spacing": [
-            "error",
-            {
-                "after": true,
-                "before": true
-            }
-        ],
         "line-comment-position": "error",
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "lines-around-comment": "error",
         "lines-around-directive": "error",
         "lines-between-class-members": "error",
         "max-classes-per-file": "error",
         "max-depth": "error",
         "max-len": "off",
-        "max-lines": ["error", { "skipBlankLines": true, "skipComments": true }],
+        "max-lines": "off",
         "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
         "max-params": "off",
@@ -126,10 +71,8 @@
         "max-statements-per-line": "off",
         "multiline-comment-style": "error",
         "new-cap": "error",
-        "new-parens": "error",
         "newline-after-var": "off",
         "newline-before-return": "off",
-        "newline-per-chained-call": "error",
         "no-alert": "error",
         "no-array-constructor": "off",
         "no-async-promise-executor": "error",
@@ -138,7 +81,6 @@
         "no-buffer-constructor": "error",
         "no-caller": "error",
         "no-catch-shadow": "error",
-        "no-confusing-arrow": "error",
         "no-console": "off",
         "no-continue": "error",
         "no-div-regex": "error",
@@ -150,8 +92,6 @@
         "no-extend-native": "error",
         "no-extra-bind": "error",
         "no-extra-label": "error",
-        "no-extra-parens": "error",
-        "no-floating-decimal": "error",
         "no-implicit-coercion": "error",
         "no-implicit-globals": "error",
         "no-implied-eval": "error",
@@ -172,9 +112,7 @@
         "no-mixed-operators": "error",
         "no-mixed-requires": "error",
         "no-multi-assign": "error",
-        "no-multi-spaces": "error",
         "no-multi-str": "error",
-        "no-multiple-empty-lines": "error",
         "no-native-reassign": "error",
         "no-negated-condition": "error",
         "no-negated-in-lhs": "error",
@@ -204,13 +142,11 @@
         "no-sequences": "error",
         "no-shadow": "off",
         "no-shadow-restricted-names": "error",
-        "no-spaced-func": "error",
         "no-sync": "error",
         "no-tabs": "off",
         "no-template-curly-in-string": "error",
         "no-ternary": "off",
         "no-throw-literal": "error",
-        "no-trailing-spaces": "error",
         "no-undef-init": "error",
         "no-undefined": "error",
         "no-underscore-dangle": ["off"],
@@ -228,23 +164,13 @@
         "no-var": "off",
         "no-void": "error",
         "no-warning-comments": "error",
-        "no-whitespace-before-property": "error",
         "no-with": "error",
-        "nonblock-statement-body-position": [
-            "error",
-            "any"
-        ],
-        "object-curly-newline": "error",
-        "object-curly-spacing": "error",
-        "object-property-newline": "error",
         "object-shorthand": "error",
         "one-var": "off",
-        "one-var-declaration-per-line": "error",
         "operator-assignment": [
             "error",
             "always"
         ],
-        "operator-linebreak": "error",
         "padded-blocks": "off",
         "padding-line-between-statements": "error",
         "prefer-arrow-callback": "error",
@@ -268,42 +194,15 @@
         "require-await": "error",
         "require-jsdoc": "error",
         "require-unicode-regexp": "error",
-        "rest-spread-spacing": "error",
         "semi": "off",
-        "semi-spacing": "error",
-        "semi-style": [
-            "error",
-            "last"
-        ],
         "sort-imports": "error",
         "sort-keys": "off",
         "sort-vars": "error",
-        "space-before-blocks": "error",
-        "space-before-function-paren": "error",
-        "space-in-parens": [
-            "error",
-            "never"
-        ],
-        "space-infix-ops": "error",
-        "space-unary-ops": "error",
         "spaced-comment": "error",
         "strict": "error",
-        "switch-colon-spacing": "error",
         "symbol-description": "error",
-        "template-curly-spacing": [
-            "error",
-            "never"
-        ],
-        "template-tag-spacing": "error",
-        "unicode-bom": [
-            "error",
-            "never"
-        ],
         "valid-jsdoc": "error",
         "vars-on-top": "off",
-        "wrap-iife": "error",
-        "wrap-regex": "error",
-        "yield-star-spacing": "error",
         "yoda": [
             "error",
             "never"
