--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "env NODE_ENV=test mocha",
     "watch": "env NODE_ENV=test mocha --watch",
     "coverage": "env NODE_ENV=test nyc --reporter=html mocha",
-    "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
+    "eslint-check": "eslint --print-config 18sh.js | eslint-config-prettier-check"
   },
   "keywords": [
     "18xx"
@@ -27,8 +27,11 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2"
   }
 }
