--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Mikko Saari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "cli-table": "^0.3.1",
     "configstore": "^5.0.0",
     "terminal-kit": "^1.28.1"
