--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -176,7 +176,7 @@
         "prefer-arrow-callback": "error",
         "prefer-const": "off",
         "prefer-destructuring": "off",
-        "prefer-named-capture-group": "error",
+        "prefer-named-capture-group": "off",
         "prefer-numeric-literals": "error",
         "prefer-object-spread": "error",
         "prefer-promise-reject-errors": "error",
